# pygentree

./: CHANGELOG.md  README.md  pyproject.toml  setup.cfg
src/pygentree/: __init__.py  __main__.py  tree_generator.py
