[metadata]
name = pygentree
version = 1.0.0
author = Taeef Najib
author_email = taeefnajib@gmail.com
description = A Python package to generate ASCII tree representation of directory structures
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/taeefnajib/pygentree
project_urls =
    Bug Tracker = https://github.com/taeefnajib/pygentree/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Environment :: Console
    Topic :: System :: Filesystems
    Topic :: Utilities
    Development Status :: 5 - Production/Stable

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    pygentree = pygentree.__main__:main

[bdist_wheel]
universal = 1

[flake8]
max-line-length = 88
extend-ignore = E203
exclude = .git,__pycache__,build,dist,*.egg-info